# btc-open-course-2025

course_01/: python_01.py  python_02.py  python_03.py  python_05.py  readme.md
course_02/: 00-wallet_generator_bit.py  01-wallet_generator_handcraft.py  04-wallet_generator_bitcoinlib.py  06-wallet_generator_bitcoinutils.py  10-wallet_info.py  11-wallet_info_localnode.py  21-legacy_transfer_bitcoinlib.py  23-legacy_transfer_bit.py  24-legacy_transfer_legacy_bitcoinutils.py  31-segwit_transfer_bitcoinlib.py  35.segwit_to_segwit_bitcoinutils.py  41-taproot_to_taproot_bitcoinutil.py  readme.md
course_02_homework/: homework.md
course_02_homework/Anray/homework/: Cargo.toml  testnet3_info.conf
course_02_homework/Anray/homework/src/: legacy_segwit_taproot_to_legacy.rs  main.rs  segwit_to_legacy.rs  taproot_to_legacy_segwit.rs
course_03/: 02-Tweak_demo.py  11-create_htlc_taproot.py  12-spend_htlc_script_path.py  readme.md
course_03_homework/: hai_03_smart_combine_utxos.py  smart_utxo_selector.py
course_03_preview/: 01-Signature_ascii_demo.py
course_03_preview/homework/Anray/homework/: Cargo.toml
course_03_preview/homework/Anray/homework/src/: main.rs  simple_demo.rs  smart_combination_utxo.rs
course_04/: readme.md
course_04_homework/: btc_info_request.py  btc_util.py  config.py  gen_leaf.py  homework_Please_Submit_here.py  some.py  spend_tr.py
course_05/: 01-taproot_with_change_with_fee_rate.py  10-rbf_low_fee_tx.py  11-cpfp_high_fee.py  11-rbf_high_fee_tx.py  21-send_to_p2sh_transaction.py  22-spend_p2sh_transaction.py  readme.md  (+1 more)
course_06/: readme.md  (+4 more)
(+167 files in other folders)
