[package]
name = "homework"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.31"
secp256k1 = "0.28"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
config = "0.13"
