[package]
name = "homework"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rust_decimal = "1.32"
anyhow = "1.0"
bitcoin = "0.31"
secp256k1 = { version = "0.28", features = ["rand", "hashes"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
